# gHRM

./: .gitignore  AGENTS.md  README.md  _chat.py  _check_triton.py  _r2_pilot.py  _r2_pilot_wsl.py  _r2_speed_bench.py  _r3_debug.py  _r3_pilot_wsl.py  _tmp_hier.toml  _tmp_r1_quick_eval.py  _tmp_r2_smoke.py  _wsl_check.py  _wsl_compile_test.py  _wsl_diag.py  _wsl_gcc_test.py  pyproject.toml  r1_quick_eval_results.json
configs/eval/: e1_phase0.toml  phase0_eval.toml
configs/model/: boundary_hrm_v0.toml  flat_gru_v0.toml  flat_recurrent_v0.toml  gated_sidecar_gru_v0.toml  gated_sidecar_gru_v0_frozen_ctrl.toml  gated_sidecar_gru_v0_frozen_gate.toml  hierarchical_gru_v0.toml  hierarchical_v0.toml  lqb_gru_v0.toml  lqb_gru_v0_frozen_queries.toml  small_transformer_v0.toml
configs/train/: e1_local_3070.toml  phase0_local.toml  phase1_local_3070.toml
data/: README.md
data/manifests/: e1_phase0.toml  phase0_tasks.toml  phase1.toml
datasets/: README.md  __init__.py
datasets/phase0/: __init__.py  graph.py  maze.py  rewrite.py  sudoku.py
datasets/phase1/: __init__.py  graph_waypoint.py  nested_arith.py  register_machine.py  segment_match.py
notebooks/: README.md
reports/: README.md
reports/experiments/: e1_report_template.md  e1_validation_matched_three_seed.md  e1_validation_single_seed.md  e4_boundary_hrm_phase1.md  g3_transformer_baseline_phase1.md  r2_pilot_2000ep.md  r3_pilot_muon_skips_ttt.md
scripts/: generate_phase0.py  generate_phase1.py  generate_text.py  new_experiment.py  run_e1.py  run_g3_phase1.py  smoke_test.py  train_tinystories.py
src/: __init__.py  cli.py
src/adapters/: __init__.py  code.py  grids.py  symbolic.py  text.py
(+138 files in other folders)
