[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghrm-lite"
version = "0.1.0"
description = "E1 scaffold for flat vs hierarchical recurrent baselines on tiny synthetic tasks."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "gHRM-Lite contributors" }]
dependencies = [
  "numpy>=1.26",
  "torch>=2.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11",
]

[project.scripts]
ghrm-lite = "src.cli:main"
ghrm-lite-run-e1 = "src.training.train_e1:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
